<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_admin_menulist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.smartorder.smartorder.AdminMenuList">

    <TextView
        android:text="@string/picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblMenuPic"
        android:textSize="16sp"
        android:textStyle="normal|bold|italic"
        android:textAllCaps="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="111dp" />

    <TextView
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblMenuName"
        android:textSize="16sp"
        android:textStyle="normal|bold|italic"
        android:textAllCaps="false"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"
        android:layout_above="@+id/lblMenuPriceDB"
        android:layout_toLeftOf="@+id/lblMenuPic"
        android:layout_toStartOf="@+id/lblMenuPic" />

    <TextView
        android:text="@string/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblMenuPrice"
        android:textSize="16sp"
        android:textStyle="normal|bold|italic"
        android:textAllCaps="false"
        android:layout_above="@+id/lblMenuStatusDB"
        android:layout_alignLeft="@+id/lblMenuName"
        android:layout_alignStart="@+id/lblMenuName" />

    <TextView
        android:text="@string/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblMenuStatus"
        android:textSize="16sp"
        android:textStyle="normal|bold|italic"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/lblMenuPrice"
        android:layout_alignStart="@+id/lblMenuPrice"
        android:layout_marginBottom="207dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ice Lemon Tea"
        android:ems="12"
        android:textSize="14sp"
        android:minWidth="0dip"
        android:minHeight="0dip"
        android:id="@+id/lblMenuNameDB"
        android:layout_alignBaseline="@+id/lblMenuName"
        android:layout_alignBottom="@+id/lblMenuName"
        android:layout_toRightOf="@+id/lblMenuStatus"
        android:layout_toEndOf="@+id/lblMenuStatus" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="RM18"
        android:ems="12"
        android:textSize="14sp"
        android:minWidth="0dip"
        android:minHeight="0dip"
        android:id="@+id/lblMenuPriceDB"
        android:layout_alignBaseline="@+id/lblMenuPrice"
        android:layout_alignBottom="@+id/lblMenuPrice"
        android:layout_alignLeft="@+id/lblMenuNameDB"
        android:layout_alignStart="@+id/lblMenuNameDB" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Out Of Stock"
        android:ems="12"
        android:textSize="14sp"
        android:minWidth="0dip"
        android:minHeight="0dip"
        android:id="@+id/lblMenuStatusDB"
        android:layout_alignBaseline="@+id/lblMenuStatus"
        android:layout_alignBottom="@+id/lblMenuStatus"
        android:layout_toRightOf="@+id/lblMenuStatus"
        android:layout_toEndOf="@+id/lblMenuStatus" />

</RelativeLayout>